# ChangeLog for gnome-extra/libgnomedb
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomedb/ChangeLog,v 1.67 2010/07/20 15:35:47 jer Exp $

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> libgnomedb-1.2.2.ebuild,
  libgnomedb-3.0.0.ebuild:
  Drop HPPA keywording (bug #324511).

  11 Jul 2010; Pacho Ramos <pacho@gentoo.org> libgnomedb-1.2.2.ebuild,
  libgnomedb-3.0.0.ebuild:
  Drop hppa keyword per bug #324511.

  20 Jan 2010; Gilles Dartiguelongue <eva@gentoo.org>
  libgnomedb-3.1.2.ebuild:
  Unkeyword 3.1.2 since it does not build and was commited by error.

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> libgnomedb-3.0.0.ebuild:
  Stable for HPPA (bug #258194).

  15 Feb 2009; Brent Baude <ranger@gentoo.org> libgnomedb-3.0.0.ebuild:
  stable ppc, bug 258194

  14 Feb 2009; Raúl Porcel <armin76@gentoo.org> libgnomedb-3.0.0.ebuild:
  ia64/sparc stable wrt #258194

  13 Feb 2009; Brent Baude <ranger@gentoo.org> libgnomedb-3.0.0.ebuild:
  stable ppc64, bug 258194

  09 Feb 2009; Markus Meier <maekke@gentoo.org> libgnomedb-3.0.0.ebuild:
  amd64/x86 stable, bug #258194

  09 Feb 2009; Tobias Klausmann <klausman@gentoo.org>
  libgnomedb-3.0.0.ebuild:
  Stable on alpha, bug #258194

  10 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  libgnomedb-3.0.0.ebuild:
  fix tests

  10 Oct 2007; Rémi Cardona <remi@gentoo.org> libgnomedb-1.2.2.ebuild,
  libgnomedb-3.0.0.ebuild:
  update gtksourceview deps (see bug #195366) and general clean-up

  24 Jun 2007; Gilles Dartiguelongue <eva@gentoo.org>
  libgnomedb-1.2.2.ebuild:
  Preparing for lib{gda,gnomedb} 3.0, fixing dependencies (bug #172106)

*libgnomedb-3.0.0 (11 May 2007)

  11 May 2007; Leonardo Boshell <leonardop@gentoo.org>
  -libgnomedb-2.99.6.ebuild, +libgnomedb-3.0.0.ebuild:
  New release. Updated dependencies.

*libgnomedb-2.99.6 (26 Mar 2007)

  26 Mar 2007; Leonardo Boshell <leonardop@gentoo.org>