@@ -1,8 +1,8 @@
 DIST libgnomedb-1.2.2.tar.bz2 654823 RMD160 9b5f2c6b684f583467de7cd4be00b6bb93cefeb3 SHA1 11de10b525051a901ba177f4324acfd1fe1ad4c8 SHA256 1dc3967ac3ff9407268ad0b36dc93eef680b5a2a088929c2a52597223d4b4d96
 DIST libgnomedb-3.0.0.tar.bz2 4192722 RMD160 103e9d9738e02f47d52647e73e45f680fb39383b SHA1 e2f964547e0db909a2ea57122f4a06ada4e58e8a SHA256 51f79da270c3d45fae71df98f4de0f8a6512bff399b0026eaaa60c0d2424f3ef
 DIST libgnomedb-3.1.2.tar.bz2 4373889 RMD160 29593d9b3dc4a305bf347f0dbb4ff9b0e1b27644 SHA1 6f39418f5916ac108fe53480159b0ed93e020f2f SHA256 4d18dae20d6fb0100478f6e007bbb1ec42494d6824155952a23c4fe3a77d861d
-EBUILD libgnomedb-1.2.2.ebuild 897 RMD160 d1a67a50cc9667e5b44e0bde8eef62010ebafcb1 SHA1 f0e2db191013ced2a49c638d6acb3644bd597bfd SHA256 786fdb7d68ea65bceebbcd66357eec7b2b5f90b78d47315a8d19fee5c4628877
-EBUILD libgnomedb-3.0.0.ebuild 1504 RMD160 da70fcc1839e7f2f066da9311b717a8343220b49 SHA1 c74710c9e82849b864e7e2b7d2aacb31b6a703a1 SHA256 b5d2baece33aefa6323fa5fc47af255bb2fc8792436d02a75a8573958815250f
-EBUILD libgnomedb-3.1.2.ebuild 1157 RMD160 0bf66f560f70f19e6f04444161ca3f22bacbba76 SHA1 2d567de10932490e29b8a385b02abd203c6d6a72 SHA256 d0582f92fbd32e8e23fdf2f1e7b9adbc068ccbf751e5a152ec82b939ca747c1d
-MISC ChangeLog 9887 RMD160 2bfd1b5c5d6642509c6480d6a77f552a31466990 SHA1 338378993d7bc79c48592ffb3d9dde3a5ece2671 SHA256 8e380f9ecf3c9bc73d63faadaaa0af72f14530f76eb31a56fa0d4b4cd100da87
+EBUILD libgnomedb-1.2.2.ebuild 918 RMD160 240af0f0ba4e5c552b70c588c89a79307c0b2f6c SHA1 a8e39395864fd344d17e07a240a57ae5fd2dca2a SHA256 67edb03bc47cb3de37a926d12c653ef70aa1ffc7bd936eacfee477ab77ef3dc3
+EBUILD libgnomedb-3.0.0.ebuild 1525 RMD160 666f69397493a1418796d655e4b60b85f2f2351c SHA1 918ed7bc3ef6f55c3515775ee32211dcb52ced43 SHA256 53ab5298ecc1015d3bc4c1555732cfbac82058c88ae42c3be294f033c6ba05b3
+EBUILD libgnomedb-3.1.2.ebuild 1176 RMD160 0ddb4df8b97441ca9241ac774718c7ed7ccf7c3d SHA1 f25002211b15a28b98ed4ea4de53f48a612d08bf SHA256 e10b799e97a274cfc75a2465f7e040dca351026b4e56c63361727c0e58d9be27
+MISC ChangeLog 10063 RMD160 aa95e15a83c105d19b1eefbcd7b1f31f07309c14 SHA1 cad16b5e7e8075b3d390b9a2400e71a4c2ec77c7 SHA256 44d76a748b0fbc7039e065ab109ef74700534609d3c0ba244fc2596ff8794f03
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
